--- a/spring-boot-reactive-websocket/src/main/resources/static/index.html
+++ b/spring-boot-reactive-websocket/src/main/resources/static/index.html
@@ -82,7 +82,10 @@
             const sendButton = document.getElementById("send-button");
             const closeButton = document.getElementById("close-button");
 
-            const socket = new WebSocket("ws://localhost:8080/chat");
+            const scheme = /^(https).*/ig.test(location.protocol) ? "wss" : "ws";
+            const host = location.host;
+            const url = scheme + "://" + host + "/chat";
+            const socket = new WebSocket(url);
 
             socket.addEventListener("open", function (event) {
                 console.log("On open => ", event);
